--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,14 @@
 [package]
 name = "mini-tcp"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [dependencies]
 tun-rs = "2"
 tracing = "0.1"
 tracing-subscriber = "0.3"
-etherparse = "0.17"
+etherparse = "0.18"
 rand = "0.9"
 libc = "0.2"
+nix = {version = "0.30.1", features = ["poll"]}
+
